test/tests/errors/error-ref-no-cont-non-pointer.sm
// true
// false
/**/
/**/

program {
    const i = 1;
    output cont i;
}